--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 	        					<a href="single.html" class="opener"></a>
 			        		</figcaption>
 			        		
-			        		<a href="img/projects/06-o.jpg"  class="thumb" data-rel="prettyPhoto"><img src="img/projects/06.jpg" width="436"/></a>
+			        		<a href="img/projects/06-oo.jpg"  class="thumb" data-rel="prettyPhoto"><img src="img/projects/06.jpg" width="436"/></a>
 		        		</figure>
 		        		<figure>
 		        			<figcaption>
